@@ -1,3 +1,7 @@
+2003-10-29 Peter Bienstman  <Peter.Bienstman@ugent.be>
+
+	* planar.cpp: Autoset N=1.
+
 2003-07-11 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
 	* planar.h: Consolidate sign choice.
